# libpq-standalone

./: .gitignore  CLAUDE.md  meson.build  meson_options.txt
src/: meson.build
src/common/: config_info.c  meson.build
src/include/: c.h  meson.build  pg_config.h.in  pg_config_manual.h  port.h
src/interfaces/: meson.build
src/interfaces/libpq/: exports.txt  meson.build
src/makefiles/: meson.build
src/port/: meson.build  path.c
src/tools/pg_bsd_indent/: meson.build
